@@ -41,6 +41,10 @@ test create {creating and populating public table} -setup $SETUP -cleanup $CLEAN
         begin tx;
         
         var p public relation {no int, c string} key {no};
+        
+        -- Drop and recreate
+        drop var p;        
+        var p public relation {no int, c string} key {no};
 
         -- not mapped
         try
@@ -95,11 +99,19 @@ test create {creating and populating public table} -setup $SETUP -cleanup $CLEAN
             put_line(tp.c);
         end for;        
 
+        -- Dropping the table the public table is mapped to should fail
+        try
+            drop var r4;
+            put_line('Dropping r4 succeeded');
+        catch err in_use_error;
+            ;
+        end try;
+
         -- Rename
         rename var p as p2;
         put_line((tuple from p2 where no = 11).c);
 
-        drop var p2;
+        insert p2 tup { no 16, c 'sss' };
 
         try
             var cnt init count(p);
@@ -109,6 +121,17 @@ test create {creating and populating public table} -setup $SETUP -cleanup $CLEAN
 
         put(count(r1)); put_line('');
         commit;
+        
+        -- Assign (copy)
+        begin tx;
+        p2 := rel { tup {no 17, c 'yo'} };
+        tp := tuple from p2;
+        drop var p2;
+        commit;
+
+        put(tp.no);
+        put(' ');
+        put_line(tp.c);
     }
 } -result {name error caught
 type mismatch caught
@@ -122,6 +145,7 @@ invalid arguments caught
 eleven
 name error caught
 2
+17 yo
 }
 
 test create_allkey {creating public table that is implicitly all-key} -setup $SETUP -cleanup $CLEANUP -body {
